<resources>
    <string name="app_name">QR Code Scanner</string>
    <string name="splash_title">Go and enjoy our features for free and make your life easy with us.</string>
    <string name="splash_start">Let’s Start</string>
    <string name="history">History</string>
    <string name="generate">Generate</string>
    <string name="location">Location</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="email">Email</string>
    <string name="x">X</string>
    <string name="instagram">Instagram</string>
    <string name="telephone">Phone</string>
    <string name="generate_qr">Generate QR</string>
    <string name="text">Text</string>
    <string name="website">Website</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="event">Event</string>
    <string name="contact">Contact</string>
    <string name="business">Business</string>
    <string name="settings">Settings</string>
    <string name="vibrate">Vibrate</string>
    <string name="vibration_when_scan_is_done">Vibration when scan is done.</string>
    <string name="beep">Beep</string>
    <string name="beep_when_scan_is_done">Beep when scan is done.</string>
    <string name="rate_us">Rate Us</string>
    <string name="your_best_reward_to_us">Your best reward to us.</string>
    <string name="share">Share</string>
    <string name="share_app_with_others">Share app with others.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="follow_our_policies_that_benefits_you">Follow our policies that benefits you.</string>
    <string name="support">Support</string>
    <string name="scan">Scan</string>
    <string name="create">Create</string>
    <string name="result">Result</string>
    <string name="show_qr_code">Show QR Code</string>
    <string name="copy">Copy</string>
    <string name="qr_code">QR Code</string>
    <string name="save">Save</string>
    <string name="error">Please Enter Valid Input!</string>
    <string name="share_via">Share Via</string>
</resources>