<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Base"
    android:padding="0dp"
    tools:context=".ResultFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_image" />

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Base"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            style="@style/TopBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/btn_back"
                style="@style/WrapContent.TopBarButtonBackground">

                <ImageView
                    style="@style/TopBarButtonImage"
                    android:paddingLeft="@dimen/_4sdp"
                    app:srcCompat="@drawable/ic_back" />
            </LinearLayout>

            <TextView
                style="@style/WrapContent.FontType.TopBarTitle"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="@string/result" />

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_36sdp"
            app:cardBackgroundColor="@color/dark_charcoal"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/group_10" />

                <TextView
                    android:id="@+id/data"
                    style="@style/WrapContent.FontType.SettingsCardTitle"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:text="Data"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toEndOf="@+id/image"
                    app:layout_constraintTop_toTopOf="@+id/image" />

                <TextView
                    android:id="@+id/date"
                    style="@style/WrapContent.FontType.SettingsCardSubTitle"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:text="16 Dec 2022, 9:30 pm"
                    app:layout_constraintBottom_toBottomOf="@+id/image"
                    app:layout_constraintStart_toEndOf="@+id/image" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@color/dark_charcoal_84"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image" />

                <TextView
                    android:id="@+id/url"
                    style="@style/WrapContent.FontType.SettingsCardTitle"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="https://www.youtube.com/watch?v=Zd9g7sKvgIM"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view" />

                <TextView
                    android:id="@+id/show_QR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:fontFamily="@font/itim_regular"
                    android:text="@string/show_qr_code"
                    android:textAlignment="center"
                    android:textColor="@color/beloved_sunflower"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintTop_toBottomOf="@id/url" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/btn_share"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_button"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@id/btn_copy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/ic_share_black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_copy"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_button"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_share"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/ic_copy" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            style="@style/WrapContent.FontType.SettingsCardTitle"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/share"
            app:layout_constraintEnd_toEndOf="@id/btn_share"
            app:layout_constraintStart_toStartOf="@id/btn_share"
            app:layout_constraintTop_toBottomOf="@+id/btn_share" />

        <TextView
            style="@style/WrapContent.FontType.SettingsCardTitle"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="@string/copy"
            app:layout_constraintEnd_toEndOf="@+id/btn_copy"
            app:layout_constraintStart_toStartOf="@+id/btn_copy"
            app:layout_constraintTop_toBottomOf="@+id/btn_copy" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>